--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.dicoding.picodiploma.danielgithubusers" >
+    package="com.dicoding.picodiploma.danielgithubusers">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -10,15 +10,20 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.DanielGithubUsers" >
+        android:theme="@style/Theme.DanielGithubUsers">
         <activity
-            android:name=".DetailUserActivity"
+            android:name=".ui.favorite.FavoriteActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.setting.SettingsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.detail.DetailUserActivity"
             android:exported="false"
-            android:label="@string/title_activity_detail_user"
-            android:theme="@style/Theme.DanielGithubUsers.NoActionBar" />
+            android:label="@string/title_activity_detail_user" />
         <activity
-            android:name=".MainActivity"
-            android:exported="true" >
+            android:name=".ui.main.MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
